made easier selection of page or letter in zone list

--- a/style/example.css
+++ b/style/example.css
@@ -74,6 +74,14 @@ td.y {
 	text-align:		center;
 }
 
+.showmax  a {
+	text-decoration:	none;
+}
+
+.showmax a:hover {
+	background-color:	#ddeeff;
+}
+
 .lettertaken {
 	color:			#000000;
 	font-weight:	bold;
