Second step of installer extracted to Twig template.

--- a/install/templates/step1.html
+++ b/install/templates/step1.html
@@ -6,7 +6,7 @@
     <input type="radio" name="language" value="pl_PL"> Chcę kontynuować po polsku.<br>
     <input type="radio" name="language" value="fr_FR"> Je préfère continuer en français.<br>
     <input type="radio" name="language" value="nb_NO"> Jeg ønsker å forsette på norsk.<br>
-    <input type="hidden" name="step" value="{{ step }}">
+    <input type="hidden" name="step" value="{{ next_step }}">
     <br>
-    <input type="submit" name="submit" value="{{ next_step_button }} {{ step }}">
+    <input type="submit" name="submit" value="{{ next_step_button }} {{ next_step }}">
 </form>
