--- a/install/templates/step2.html
+++ b/install/templates/step2.html
@@ -5,6 +5,6 @@
 
 <form method="post">
     <input type="hidden" name="language" value="{{ language }}">
-    <input type="hidden" name="step" value="{{ step }}">
+    <input type="hidden" name="step" value="{{ next_step }}">
     <input type="submit" name="submit" value="{{ next_step_button }} {{ next_step }}">
 </form>
