Let's use i18n twig extension to handle localized strings.

--- a/install/templates/header.html
+++ b/install/templates/header.html
@@ -8,4 +8,4 @@
 </head>
 <body>
     <h1>Poweradmin</h1>
-    <h2>{{ message1 }} {{ current_step }}</h2>
+    <h2>{% trans 'Installation step' %} {{ current_step }}</h2>
