Changes for new dnsutil
dnssec* files were changed to allow poweradmin work with new dnsutil.
You need to have single pdns.conf in /etc/powerdns/ because poweradmin
dont know "include" statement in config file.
This is ugly workaround to obtain full functionality at pdns 4.0.0.
Everything seems to work around dnssec keys:
- signing
- unsigning
- create additional keys (CSK)
- delete keys
- activate/deactivate keys
- list keys

Not working or maybe bad behaviour:
- adding key add only CSK (even if you select ZSK, KSK)
- there should be more then one active key for zone

--- a/style/punk.css
+++ b/style/punk.css
@@ -39,7 +39,7 @@ h1 {
 
 h1, .menu {
 	margin: 10px auto;
-	width: 980px;
+	width: 90%;
 }
 
 h2, h3 {
@@ -48,7 +48,7 @@ h2, h3 {
 
 .content, .footer {
 	margin: 10px auto;
-	width: 940px;
+	width: 90%;
 }
 
 /*NAVIGATION*/
