Added html5, Added fontawseome, changed html submit to button tag, added dark mode design, Added bootstrap and Bootstrap Tooltipp

--- a/style/dark.css
+++ b/style/dark.css
@@ -23,6 +23,11 @@
  * General
  *
  */
+html {
+    overflow-y: scroll;
+    height: 101%;
+}
+
 body {
     background: #0d1117;
     font-family: 'Oswald';
