--- a/install/templates/step6.html
+++ b/install/templates/step6.html
@@ -25,7 +25,7 @@ $session_key = '{{ session_key }}';
 
 $iface_lang = '{{ language }}';
 
-$dns_hostmaster = '{{ hostmaster }}';
+$dns_hostmaster = '{{ dns_hostmaster }}';
 $dns_ns1 = '{{ dns_ns1 }}';
 $dns_ns2 = '{{ dns_ns2 }}';
 </pre>
