Removed unnecessary quote.

--- a/install/templates/step3.html
+++ b/install/templates/step3.html
@@ -38,7 +38,7 @@
          <tr>
               <td>{% trans 'Database' %}</td>
               <td><input type="text" name="name" value=""></td>
-              <td><span id="db_name_title">{% trans 'The name of the PowerDNS database.' %}</span>"
+              <td><span id="db_name_title">{% trans 'The name of the PowerDNS database.' %}</span>
                <span id="db_path_title" style="display: none;">{% trans 'The path and filename to the PowerDNS SQLite database.' %}</span></td>
              </tr>
           <tr>
