Credit page was removed, there's GitHub contributors for that.

--- a/install/templates/footer.html
+++ b/install/templates/footer.html
@@ -1,5 +1,5 @@
     <div class="footer">
-        <a href="http://www.poweradmin.org/">a complete(r) <strong>poweradmin</strong> v{{ version }}</a> - <a href="http://www.poweradmin.org/credits.html">credits</a>
+        <a href="https://www.poweradmin.org">a complete(r) <strong>poweradmin</strong> v{{ version }}</a>
     </div>
 </body>
 </html>
