Resolved linter errors related to password change function.

--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -2,7 +2,7 @@
 <form method="post" action="change_password.php">
     <table>
         <tr>
-            <td class="n">{% trans 'Current password' %}:</td>
+            <td class="n" width="150">{% trans 'Current password' %}:</td>
             <td class="n"><input type="password" class="input" name="currentpass" value=""></td>
         </tr>
         <tr>
