--- a/templates/add_perm_templ.html
+++ b/templates/add_perm_templ.html
@@ -2,11 +2,11 @@
 <form method="post" action="">
     <table>
         <tr>
-            <th>{% trans 'Name' %}</th>
-            <td><input class="wide" type="text" name="templ_name" value=""></td>
+            <td width="100">{% trans 'Name' %}</td>
+            <td><input class="input" type="text" name="templ_name" value=""></td>
         </tr>
         <tr>
-            <th>{% trans 'Description' %}</th>
+            <td>{% trans 'Description' %}</td>
             <td><input class="wide" type="text" name="templ_descr" value=""></td>
         </tr>
     </table>
