--- a/templates/add_zone_templ.html
+++ b/templates/add_zone_templ.html
@@ -2,12 +2,12 @@
 <form method="post" action="add_zone_templ.php">
     <table>
         <tr>
-            <th>{% trans 'Name' %}</th>
-            <td><input class="wide" type="text" name="templ_name" value=""></td>
+            <td class="n" width="150">{% trans 'Name' %}</td>
+            <td class="n"><input class="input" type="text" name="templ_name" value=""></td>
         </tr>
         <tr>
-            <th>{% trans 'Description' %}</th>
-            <td><input class="wide" type="text" name="templ_descr" value=""></td>
+            <td class="n">{% trans 'Description' %}</td>
+            <td class="n"><input class="wide" type="text" name="templ_descr" value=""></td>
         </tr>
     </table>
     <input type="submit" class="button" name="commit" value="{% trans 'Add zone template' %}">
