--- a/templates/header.html
+++ b/templates/header.html
@@ -4,30 +4,39 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ iface_title }}</title>
-    <link rel=stylesheet href="style/{{ iface_style }}.css?time={{ file_version }}" type="text/css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="style/{{ iface_style }}.css?time={{ file_version }}" type="text/css">
     <script type="text/javascript" src="inc/helper.js?time={{ file_version }}"></script>
 </head>
 <body>
 {% if custom_header %}
     {% include ('custom/header.html') %}
 {% else %}
-    <h1>{{ iface_title }}</h1>
+    <header class="py-3 mb-4 border-bottom sticky-top">
+        <div class="container">
+            <div class="navbar-brand d-flex align-items-center">
+                <img class="me-2" src="images/logo.png" height="32">
+                <span class="fs-4">{{ iface_title }}</span>
+            </div>
+        </div>
+    </header>
 {% endif %}
 
 {% if install_error %}
-    <div>
-        <div class="error">Error: {{ install_error | raw }}</div>
+    <div class="container">
+        <div class="alert alert-danger" role="alert">><stron>Error:</stron> {{ install_error | raw }}</div>
     </div>
 {% endif %}
 
 {% if user_logged_in %}
     {% if session_key_error %}
-        <div>
-            <div class="error">Error: {{ session_key_error | raw }}</div>
+        <div class="container">
+            <div class="alert alert-danger"><strong>Error:</strong> {{ session_key_error | raw }}</div>
         </div>
     {% endif %}
 
-    <div class="menu">
+    <div class="container pb-3">
         <span class="menuitem"><a href="index.php">{% trans 'Index' %}</a></span>
         {% if perm_search %}
             <span class="menuitem"><a href="search.php">{% trans 'Search zones and records' %}</a></span>
@@ -61,4 +70,4 @@
     </div>
 {% endif %}
 
-<div class="content">
+<main class="container pb-3 flex-shrink-0">
