Updated navigation bar.

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
 </main>
-<footer class="footer py-3 bg-light">
+<footer class="footer py-3 bg-light border">
     <div class="container">
         {% if custom_footer %}
             {% include ('custom/footer.html') %}
