--- a/templates/header.html
+++ b/templates/header.html
@@ -4,71 +4,72 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ iface_title }}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style/{{ iface_style }}.css?time={{ file_version }}" type="text/css">
     <script type="text/javascript" src="inc/helper.js?time={{ file_version }}"></script>
 </head>
 <body>
 {% if custom_header %}
-    {% include ('custom/header.html') %}
+{% include ('custom/header.html') %}
 {% else %}
-    <header class="mb-4 border-bottom sticky-top">
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container">
-                <div class="navbar-brand d-flex align-items-center">
-                    <a href="index.php"><img class="me-2" src="images/logo.png" height="32"></a>
-                    <span class="fs-4">{{ iface_title }}</span>
-                </div>
+<header class="mb-4 border-bottom sticky-top">
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container">
+            <div class="navbar-brand d-flex align-items-center">
+                <a href="index.php"><img class="me-2" src="images/logo.png" height="32"></a>
+                <span class="fs-4">{{ iface_title }}</span>
             </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
+</header>
 {% endif %}
 
 {% if install_error %}
-    <div class="container">
-        <div class="alert alert-danger" role="alert"><strong>Error:</strong> {{ install_error | raw }}</div>
-    </div>
+<div class="container">
+    <div class="alert alert-danger" role="alert"><strong>Error:</strong> {{ install_error | raw }}</div>
+</div>
 {% endif %}
 
 {% if user_logged_in %}
-    {% if session_key_error %}
-        <div class="container">
-            <div class="alert alert-danger"><strong>Error:</strong> {{ session_key_error | raw }}</div>
-        </div>
-    {% endif %}
+{% if session_key_error %}
+<div class="container">
+    <div class="alert alert-danger"><strong>Error:</strong> {{ session_key_error | raw }}</div>
+</div>
+{% endif %}
 
-    <div class="container pb-3">
-        {% if perm_search %}
-            <span class="menuitem"><a href="search.php">{% trans 'Search zones and records' %}</a></span>
-        {% endif %}
-        {% if perm_view_zone_own or perm_view_zone_other %}
-            <span class="menuitem"><a href="list_zones.php">{% trans 'List zones' %}</a></span>
-        {% endif %}
-        {% if perm_zone_master_add %}
-            <span class="menuitem"><a href="list_zone_templ.php">{% trans 'List zone templates' %}</a></span>
-        {% endif %}
-        {% if perm_supermaster_view %}
-            <span class="menuitem"><a href="list_supermasters.php">{% trans 'List supermasters' %}</a></span>
-        {% endif %}
-        {% if perm_zone_master_add %}
-            <span class="menuitem"><a href="add_zone_master.php">{% trans 'Add master zone' %}</a></span>
-        {% endif %}
-        {% if perm_zone_slave_add %}
-            <span class="menuitem"><a href="add_zone_slave.php">{% trans 'Add slave zone' %}</a></span>
-        {% endif %}
-        {% if perm_supermaster_add %}
-            <span class="menuitem"><a href="add_supermaster.php">{% trans 'Add supermaster' %}</a></span>
-        {% endif %}
-        {% if perm_zone_master_add %}
-            <span class="menuitem"><a href="bulk_registration.php">{% trans 'Bulk registration' %}</a></span>
-        {% endif %}
-        {% if auth_used %}
-            <span class="menuitem"><a href="change_password.php">{% trans 'Change password' %}</a></span>
-        {% endif %}
-        <span class="menuitem"><a href="users.php">{% trans 'User administration' %}</a></span>
-        <span class="menuitem"><a href="index.php?logout">{% trans 'Logout' %}</a></span>
-    </div>
+<div class="container pb-3">
+    {% if perm_search %}
+    <span class="menuitem"><a href="search.php">{% trans 'Search zones and records' %}</a></span>
+    {% endif %}
+    {% if perm_view_zone_own or perm_view_zone_other %}
+    <span class="menuitem"><a href="list_zones.php">{% trans 'List zones' %}</a></span>
+    {% endif %}
+    {% if perm_zone_master_add %}
+    <span class="menuitem"><a href="list_zone_templ.php">{% trans 'List zone templates' %}</a></span>
+    {% endif %}
+    {% if perm_supermaster_view %}
+    <span class="menuitem"><a href="list_supermasters.php">{% trans 'List supermasters' %}</a></span>
+    {% endif %}
+    {% if perm_zone_master_add %}
+    <span class="menuitem"><a href="add_zone_master.php">{% trans 'Add master zone' %}</a></span>
+    {% endif %}
+    {% if perm_zone_slave_add %}
+    <span class="menuitem"><a href="add_zone_slave.php">{% trans 'Add slave zone' %}</a></span>
+    {% endif %}
+    {% if perm_supermaster_add %}
+    <span class="menuitem"><a href="add_supermaster.php">{% trans 'Add supermaster' %}</a></span>
+    {% endif %}
+    {% if perm_zone_master_add %}
+    <span class="menuitem"><a href="bulk_registration.php">{% trans 'Bulk registration' %}</a></span>
+    {% endif %}
+    {% if auth_used %}
+    <span class="menuitem"><a href="change_password.php">{% trans 'Change password' %}</a></span>
+    {% endif %}
+    <span class="menuitem"><a href="users.php">{% trans 'User administration' %}</a></span>
+    <span class="menuitem"><a href="index.php?logout">{% trans 'Logout' %}</a></span>
+</div>
 {% endif %}
 
 <main class="container pb-3 flex-shrink-0">
