Updated top navigation.

--- a/templates/header.html
+++ b/templates/header.html
@@ -14,72 +14,81 @@
 {% if custom_header %}
 {% include ('custom/header.html') %}
 {% else %}
-<header class="mb-4 border-bottom sticky-top">
+<header class="mb-4 border-bottom">
     <div class="container">
-        <nav class="navbar navbar-expand">
-            <div class="container-fluid">
-                <a class="navbar-brand d-flex align-items-center" href="index.php">
-                    <img class="me-2" src="images/logo.png" height="32">
-                    <span class="fs-4">{{ iface_title }}</span>
-                </a>
-                {% if user_logged_in %}
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        {% if perm_search %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="search.php">{% trans 'Search zones and records' %}</a>
-                        </li>
-                        {% endif %}
-                        {% if perm_view_zone_own or perm_view_zone_other %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="list_zones.php">{% trans 'List zones' %}</a>
-                        </li>
-                        {% endif %}
-                        {% if perm_zone_master_add %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="list_zone_templ.php">{% trans 'List zone templates' %}</a>
-                        </li>
-                        {% endif %}
-                        {% if perm_supermaster_view %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="list_supermasters.php">{% trans 'List supermasters' %}</a>
-                        </li>
-                        {% endif %}
-                        {% if perm_zone_master_add %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="add_zone_master.php">{% trans 'Add master zone' %}</a>
-                        </li>
-                        {% endif %}
-                        {% if perm_zone_slave_add %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="add_zone_slave.php">{% trans 'Add slave zone' %}</a>
-                        </li>
-                        {% endif %}
-                        {% if perm_supermaster_add %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="add_supermaster.php">{% trans 'Add supermaster' %}</a>
-                        </li>
-                        {% endif %}
-                        {% if perm_zone_master_add %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="bulk_registration.php">{% trans 'Bulk registration' %}</a>
-                        </li>
-                        {% endif %}
-                        {% if auth_used %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="change_password.php">{% trans 'Change password' %}</a>
-                        </li>
-                        {% endif %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="users.php">{% trans 'User administration' %}</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.php?logout">{% trans 'Logout' %}</a>
-                        </li>
-                    </ul>
-                </div>
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <a class="py-4 d-flex align-items-center my-2 my-lg-0 me-lg-auto text-black text-decoration-none"
+               href="index.php">
+                <img class="me-2" src="images/logo.png" height="32">
+                <span class="fs-4">{{ iface_title }}</span>
+            </a>
+            <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
+            {% if user_logged_in %}
+                {% if perm_search %}
+                <li class="p-1">
+                    <a href="search.php" class="nav-link text-secondary"><i class="bi bi-search"></i></a>
+                    <a href="search.php" class="text-secondary text-decoration-none">{% trans 'Search' %}</a>
+                </li>
                 {% endif %}
-            </div>
+                {% if perm_view_zone_own or perm_view_zone_other %}
+                <li class="p-1">
+                    <a href="list_zones.php" class="nav-link text-secondary"><i class="bi bi-diagram-3"></i></a>
+                    <a href="list_zones.php" class="text-secondary text-decoration-none">{% trans 'Zones' %}</a>
+                </li>
+                {% endif %}
+<!--                {% if perm_zone_master_add %}-->
+<!--                <li class="p-1">-->
+<!--                    <a href="list_zone_templ.php" class="nav-link text-secondary"><i class="bi bi-files"></i></a>-->
+<!--                    <a href="list_zone_templ.php" class="text-secondary text-decoration-none">{% trans 'Templates' %}</a>-->
+<!--                </li>-->
+<!--                {% endif %}-->
+<!--                {% if perm_supermaster_view %}-->
+<!--                <li class="p-1">-->
+<!--                    <a href="list_supermasters.php" class="nav-link text-secondary"><i class="bi bi-server"></i></a>-->
+<!--                    <a href="list_supermasters.php" class="text-secondary text-decoration-none">{% trans 'Supermasters' %}</a>-->
+<!--                </li>-->
+<!--                {% endif %}-->
+<!--                {% if perm_zone_master_add %}-->
+<!--                <li class="p-1">-->
+<!--                    <a href="add_zone_master.php" class="nav-link text-secondary"><i class="bi bi-plus-circle"></i></a>-->
+<!--                    <a href="add_zone_master.php" class="text-secondary text-decoration-none">{% trans 'Add master zone' %}</a>-->
+<!--                </li>-->
+<!--                {% endif %}-->
+<!--                {% if perm_zone_slave_add %}-->
+<!--                <li class="p-1">-->
+<!--                    <a href="add_zone_slave.php" class="nav-link text-secondary"><i class="bi bi-plus-circle"></i></a>-->
+<!--                    <a href="add_zone_slave.php" class="text-secondary text-decoration-none">{% trans 'Add slave zone' %}</a>-->
+<!--                </li>-->
+<!--                {% endif %}-->
+<!--                {% if perm_supermaster_add %}-->
+<!--                <li class="p-1">-->
+<!--                    <a href="add_supermaster.php" class="nav-link text-secondary"><i class="bi bi-plus-circle"></i></a>-->
+<!--                    <a href="add_supermaster.php" class="text-secondary text-decoration-none">{% trans 'Add supermaster' %}</a>-->
+<!--                </li>-->
+<!--                {% endif %}-->
+<!--                {% if perm_zone_master_add %}-->
+<!--                <li class="p-1">-->
+<!--                    <a href="bulk_registration.php" class="nav-link text-secondary"><i class="bi bi-plus-circle"></i></a>-->
+<!--                    <a href="bulk_registration.php" class="text-secondary text-decoration-none">{% trans 'Bulk registration' %}</a>-->
+<!--                </li>-->
+<!--                {% endif %}-->
+<!--                {% if auth_used %}-->
+<!--                <li class="p-1">-->
+<!--                    <a href="change_password.php" class="nav-link text-secondary"><i class="bi bi-key"></i></a>-->
+<!--                    <a href="change_password.php" class="text-secondary text-decoration-none">{% trans 'Change password' %}</a>-->
+<!--                </li>-->
+<!--                {% endif %}-->
+                <li class="p-1">
+                    <a href="users.php" class="nav-link text-secondary"><i class="bi bi-people"></i></a>
+                    <a href="users.php" class="text-secondary text-decoration-none">{% trans 'Users' %}</a>
+                </li>
+                <li class="p-1">
+                    <a href="index.php?logout" class="nav-link text-secondary"><i class="bi bi-box-arrow-right"></i></a>
+                    <a href="index.php?logout" class="text-secondary text-decoration-none">{% trans 'Logout' %}</a>
+                </li>
+            {% endif %}
+            </ul>
+        </div>
         </nav>
     </div>
 </header>
