--- a/templates/index.html
+++ b/templates/index.html
@@ -35,6 +35,11 @@
             <i class="bi bi-plus-circle"></i> <a href="add_supermaster.php">{% trans 'Add supermaster' %}</a>
         </li>
     {% endif %}
+    {% if perm_zone_master_add %}
+        <li class="list-group-item list-group-item-action">
+            <i class="bi bi-plus-circle"></i> <a href="bulk_registration.php">{% trans 'Bulk registration' %}</a>
+        </li>
+    {% endif %}
     {% if auth_used != "ldap" %}
         <li class="list-group-item list-group-item-action">
             <i class="bi bi-key"></i> <a href="change_password.php">{% trans 'Change password' %}</a>
